--- a/assets/style/cmps/note/note-index.css
+++ b/assets/style/cmps/note/note-index.css
@@ -1,3 +1,16 @@
 .note-index {
-    margin: 2rem;
+    /* margin: 2rem; */
+    margin: 2em;
+    border-radius: 2em;
+    overflow: hidden;
+    border-radius: var(--br-l);
+    background-color: var(--clrbg-light-a);
+    height: calc(100vh - var(--header-height) - 4em);
+    overflow-y: auto;
+    padding: 2em;
+    ms-overflow-style: none;
+    scrollbar-width: none; /* Firefox */
+}
+.note-index::-webkit-scrollbar {
+    display: none;
 }
